--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -6,7 +6,7 @@ The following Watershed Connectivity Remediation Plan (WCRP) represents the culm
 
 WCRPs are long-term, actionable plans that blend local stakeholder and rightsholder knowledge with innovative GIS analyses to gain a shared understanding of where remediation efforts will have the greatest benefit for anadromous salmonids. The planning process is inspired by the [Conservation Standards](https://cmp-openstandards.org/wp-content/uploads/2020/07/CMP-Open-Standards-for-the-Practice-of-Conservation-v4.0.pdf) (v.4.0), which is a conservation planning framework that allows planning teams to systematically identify, implement, and monitor strategies to apply the most effective solutions to high priority conservation problems. There is a rich history of connectivity and fish passage planning and remediation work in the Bulkley River watershed that this WCRP builds upon, including the work undertaken by the BC Fish Passage Technical Working Group, the Skeena Fisheries Commission, the Office of the Wet’suwet’en, the Wet'suwet'en First Nation, and the Society for Ecosystem Restoration in Northern British Columbia (SERNbc) among others (@Wilson2007, @Mccarthy2015, @Smith2018, @Casselman, @Irvine2018). The Canadian Wildlife Federation will continue to engage and coordinate with local partners and existing initiatives, in part through the Skeena Environmental Stewardship Initiative. SERNbc is also currently undertaking undertaking [fish passage](https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf) work in the Bulkley River watershed, with some overlap and some differences in scope compared to the work and processes described in this WCRP. The SERNbc project relies on expert knowledge and field assessments in both the Bulkley and Morice watersheds to improve passage for all fish, including fluvial and resident species, and focuses on stream crossings that act as barriers (@Irvine2021). This WCRP focuses specifically on improving connectivity for anadromous salmonid species and uses consensus-based planning exercises and spatial model implementation to develop watershed-scale status assessments, goal setting, and prioritization for multiple barrier types. SERNbc and the WCRP planning team are currently collaborating on the development of the [bcfishpass](https://github.com/smnorris/bcfishpass) connectivity model and will continue to work together to promote coordination and collaboration between the two initiatives moving forward.
 
-The planning team compiled existing barrier location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where barrier prioritization will be conducted, and subsequent remediation efforts will take place. Additionally, the team selected target fish species, assessed their current connectivity status in the watershed, defined concrete goals for gains in connectivity, and developed a priority list of barriers for remediation to achieve those goals. During the 2021 field season, 28 barrier assessments and 21 habitat confirmations were completed. Seventeen barriers were added to the intermediate barrier list based on 2021 field assessments, and an additional 17 crossings were removed from the list, due to being passable, not existing, or having low quality habitat (see @tbl-removed-from-consideration). The preliminary barriers list was further divided this year into an "intermediate barriers" list (see @tbl-intermediate), which includes barriers that require further assessment, and a "priority barriers" list (see @tbl-priority), which includes barriers that are actively being pursued for design and remediation. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier remediation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
+The planning team compiled existing barrier location and assessment data, habitat data, and previously identified priorities, and combined this with local and Indigenous knowledge to create a strategic watershed-scale plan to improve connectivity. To expand on this work, the Bulkley River WCRP planning team applied the WCRP planning framework to define the "thematic" scope of freshwater connectivity and refine the "geographic" scope to identify those portions of the watershed where barrier prioritization will be conducted, and subsequent remediation efforts will take place. Additionally, the team selected target fish species, assessed their current connectivity status in the watershed, defined concrete goals for gains in connectivity, and developed a priority list of barriers for remediation to achieve those goals. While the current version of this plan is based on the best-available information at the time of publishing, WCRPs are intended to be “living plans” that are updated regularly as new information becomes available, or if local priorities and contexts change. As such, this document should be interpreted as a current “snap-shot” in time, and future iterations of this WCRP will build upon the material presented in this plan to continuously improve aquatic barrier remediation for migratory fish in the Bulkley River watershed. For more information on how WCRPs are developed, see @Mazany-Wright2021-hs.
 
 ## Vision Statement {-}
 
