--- a/content/supplementary-information.qmd
+++ b/content/supplementary-information.qmd
@@ -10,7 +10,7 @@ The following situation model was developed by the WCRP partnership to “map”
 
 ## Strategies & Actions {-}
 
-Effectiveness evaluation of identified conservation strategies and associated actions to improve connectivity for target species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier rehabilitation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
+Effectiveness evaluation of identified conservation strategies and associated actions to improve connectivity for focal species in the Bulkley River watershed. The planning team identified four broad strategies to implement through this WCRP, 1) barrier rehabilitation, 2) barrier prevention, 3) strengthen Indigenous connections to land and water, and 4) planning and progress tracking. Individual actions were qualitatively evaluated based on the anticipated effect each action will have on realizing on-the-ground gains in connectivity. Effectiveness ratings are based on a combination of "Feasibility and "Impact", Feasibility is defined as the degree to which the project team can implement the action within realistic constraints (financial, time, ethical, etc.) and Impact is the degree to which the action is likely to contribute to achieving one or more of the goals established in this plan.
 
 ## Strategy 1: Barrier Rehabilitation {-}
 ```{python echo=FALSE}
